There must be last NULL argument in _gpgme_strconcat() call.
Description
Description
Revisions and Commits
Revisions and Commits
rM GPGME | |||
rM4c49417cc0db core,w32: Fix missing sentinel in dir name builder. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | aheinecke | T4331 Stack Buffer overflow in ``` parse_array (cJSON * item, const char *value, const char **ep)``` if we send a prepared JSON file | ||
Resolved | werner | T4376 Release gpgme 1.13.0 | ||
Resolved | werner | T4369 Segfault caused by incorrect _gpgme_strconcat() usage | ||
Resolved | aheinecke | T4264 Gpg4win 3.1.6 | ||
Resolved | werner | T4289 GnuPG 2.1.12 release |
Event Timeline
Comment Actions
Ah okay, that was Windows were we have a couple of warnings anyway. Must have missed that one.